--- a/microfrontends/hero-widget/src/app/app.component.html
+++ b/microfrontends/hero-widget/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="mb-16 bordered p-2">
+<h1>{{pageCode}}</h1>
+
+<div class="mb-16 bordered p-2 border-entando border-hero-table">
   <form class="grid grid-flow-row gap-2" [formGroup]="heroForm" (ngSubmit)="saveNewHero()">
     <label class="input input-bordered flex items-center gap-2">
       <input type="text" class="grow" placeholder="Name" formControlName="name" />
