--- a/microfrontends/hero-form-widget/src/app/app.component.html
+++ b/microfrontends/hero-form-widget/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Hero Form</h1>
+<h1>{{title}}</h1>
 <div class="mb-16 bordered p-2">
   <form class="grid grid-flow-row gap-2" [formGroup]="heroForm" (ngSubmit)="saveNewHero()">
     <label class="input input-bordered flex items-center gap-2">
