--- a/microfrontends/form-hero-widget/src/app/app.component.html
+++ b/microfrontends/form-hero-widget/src/app/app.component.html
@@ -1,3 +1,5 @@
+<h1>{{ page_code }}</h1>
+
 <div class="mb-16 bordered p-2 border-entando border-hero-table">
   <form class="grid grid-flow-row gap-2" [formGroup]="heroForm" (ngSubmit)="saveNewHero()">
     <label class="input input-bordered flex items-center gap-2">
